chore: replace zitadel with dex (#28)
